generic/kubernetes/operator-based/03-keycloak-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: keycloak
    namespace: camunda
spec:
    ingressClassName: nginx
    tls:
        - hosts:
              - ${CAMUNDA_DOMAIN}
          secretName: camunda-tls # optional, create separately
    rules:
        - host: ${CAMUNDA_DOMAIN}
          http:
              paths:
                  - path: /auth
                    pathType: Prefix
                    backend:
                        service:
                            name: keycloak
                            port:
                                number: 8080
